Revision history for Perl extension TAP::Formatter::JUnit.

0.04
    - extra escaping/cleanup of characters before inserting them into the XML
      stream, to keep JUnit parsers like Hudson's from choking.  Thanks go out
      to Joe McMahon and Michael Nachbaur for prodding to get this fixed and
      for patches.

0.03    Sun Dec 13 22:36 PST 2009
    - add timer output for each test case (not just for the suite as a whole);
      Hudson needs this in order to show timing output for test runs.  Thanks
      to Mark Aufflick for the poke.
    - internal cleanups

0.02    Fri Jan  9 23:35 PST 2009
    - POD updates
    - minor cleanup to the test names output in JUnit
    - attempt to fix failing CPAN Tester reports, where an older version of
      'prove' was being picked up by t/formatter.t; provide our own
      't/bin/my-prove' and use that instead.

0.01    Wed Jan  7 22:06 PST 2009
    - initial version
    - had this sitting around on my HD for several months and am (finally)
      getting around to uploading it to CPAN