@@ -5,6 +5,9 @@ Revision history for Perl extension TAP::Formatter::JUnit.
       stream, to keep JUnit parsers like Hudson's from choking.  Thanks go out
       to Joe McMahon and Michael Nachbaur for prodding to get this fixed and
       for patches.
+    - new "--name" option for tap2junit, allowing for tests to be explicitly
+      named.  Aliased to "--junit_name" to provide compatibility with patch
+      from Joe McMahon.
 
 0.03    Sun Dec 13 22:36 PST 2009
     - add timer output for each test case (not just for the suite as a whole);
